--- a/index.html
+++ b/index.html
@@ -2504,7 +2504,7 @@
 <script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.27495"></script>
 <script type="text/javascript">
     document.getElementById("AJP").onclick = function () {
-        location.href = "Livre.html";
+        location.href = "https://promois.shop/Livre.html";
     };
 </script>
     
